k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-poc
  labels:
    name: devsecops-poc
